# dat_system

./: .gitignore  CLAUDE.md  README.md  README_EN.md  cli.py  manage.py  pyproject.toml  requirements.txt
backend/: config.py  database.py  i18n.py  main.py  models.py
backend/routers/: admin.py  auth.py  dat.py  export.py  models_api.py
backend/services/: dat_calculator.py  embedding.py  vector_cache.py
backend/utils/: visualization.py
dat/: asgi.py  settings.py  urls.py  wsgi.py
dat_app/: admin.py  apps.py  froms.py  models.py  views.py
dat_app/middleware/: auth.py  dynamic_menu.py
dat_app/migrations/: 0001_initial.py  0002_alter_dat_test_dat_score_and_more.py  0003_rename_user_dat_test_username.py  0004_remove_dat_test_username.py  0005_dat_test_username.py  0006_dat_test_picture_path.py  0007_spend_time.py  0008_task_time.py  0009_dat_test_spend_time.py  0010_alter_dat_test_word1_alter_dat_test_word10_and_more.py  0011_alter_dat_test_spend_time.py  0012_alter_dat_test_spend_time_alter_dat_test_word1_and_more.py  0013_dat_test_limited_time.py
dat_app/utils/: dat_test.py  data_migration.py  fenxi.py  pagination.py  tt.py
data/: data.sql
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  i18n.js
frontend/pages/: analysis.html  introduction.html  login.html  model-config.html  register.html  results.html  (+2 more)
models/: w2v.wv  w2v.wv.vectors.npy
templates/: 403.html  dat_score.html  dat_test.html  data_analysis.html  fenshu.html  introduction.html  jieshao.html  register.html  results.html  test1.html  update.html  upload_user.html
(+6 files in other folders)
